# cutie

./: .eslintrc.cjs  .gitignore  .prettierrc.json  .stylelintignore  .stylelintrc.json  ARCHITECTURE.md  AREA_REFACTORING_MIGRATION_GUIDE.md  AREA_REFACTORING_SUMMARY.md  BUG_REPORT_PAST_DATE.md  CALENDAR_DISPLAY_FIX.md  CALENDAR_DRAG_MIGRATION_PLAN.md  CLAUDE.md  CLEANUP_OLD_FILES.md  COMMANDBUS_TO_CPU_COMPLETE.md  COMMAND_BUS_IMPLEMENTATION.md  COMPLETE_TASK_PERFORMANCE_ANALYSIS.md  CPU_DECOUPLING_ANALYSIS.md  CPU_DECOUPLING_COMPLETE.md  CRITICAL_LESSON_OPTIMISTIC_UPDATE_REVEALS_RACE_CONDITION.md  CROSS_VIEW_DRAG_FIXES.md  CUTIE_CONCEPTS.md  Cutie项目开发至今完整数据分析报告.md  DATABASE_LOCK_ISSUE_ANALYSIS.md  DATA_SCHEMA_COUPLING.md  DEVELOPMENT_GUIDELINES.md  DEVELOPMENT_REPORT_2025-09-30.md  DRAG_DROP_SYSTEM_COMPLETE_REPORT.md  DRAG_DROP_SYSTEM_DESIGN.md  DRAG_OCCLUSION_FIX.md  DRAG_SESSION_TYPE_UNIFICATION_REPORT.md  DRAG_STRATEGY_PRODUCTION_MODE.md  DRAG_STRATEGY_SYSTEM.md  DRAG_SYSTEM_GENERIC_REFACTOR.md  FINAL_ARCHITECTURE_REPORT.md  FLEXIBLE_CONTEXT_DESIGN.md  FRONTEND_AUDIT_REPORT.md  FRONTEND_CORRID_IMPLEMENTATION.md  FRONTEND_CPU_ARCHITECTURE.md  INFRA_ARCHITECTURE.md  INT_ARCHITECTURE_REFACTOR.md  (+44 more)
src-tauri/: .taurignore  ARCHITECTURE.md  Cargo.toml  ENDPOINTS_SPEC.md  NEW_ARCHITECTURE_DEMO.md  REFACTORING_COMPLETE.md  build.rs  rust-toolchain.toml  tarpaulin-report.html  tauri.conf.json
src-tauri/.sqlx/: query-2112f494a1693a59c106d8d57041804b9f3307173bc4a23d7916d94df297fe69.json  query-419e250f107250367a98e5e5c51123394ef2c1a337e75d9aa305dde49f16b208.json
src-tauri/capabilities/: default.json
src-tauri/data/: cutie.db  cutie.db-shm  cutie.db-wal
src-tauri/migrations/: 20241001000000_initial_schema.sql  20241008000000_add_deleted_at_field.sql  20241010020000_add_recurrence_unique_index.sql  20250111000000_create_user_settings.sql  20250921123300_initial_schema.sql  20251112000000_add_ai_category_to_user_settings.sql  20251122000000_add_task_sort_positions.sql  20251123090000_add_template_sort_rank.sql  20251123093000_drop_view_preferences.sql  20251128000000_add_time_block_recurrences.sql  20251212000000_add_shutdown_ritual.sql  20251213000000_add_shutdown_ritual_settings.sql
src-tauri/src/: lib.rs  main.rs  ts_export.rs
src-tauri/src/adapters/: mod.rs  toml_setting_repository.rs
src-tauri/src/commands/: activity_commands.rs  checkpoint_commands.rs  link_commands.rs  mod.rs  project_commands.rs  tag_commands.rs  task_commands.rs
src-tauri/src/common/: logger.rs  mod.rs
src-tauri/src/config/: app_config.rs  database_config.rs  mod.rs  server_config.rs
src-tauri/src/core/: db.rs  mod.rs  models.rs
src-tauri/src/entities/: mod.rs  transaction_result.rs
src-tauri/src/features/: SFC_SPEC.md  ai_handler.rs  api_router.rs  areas.rs  mod.rs  projects.rs  recurrences.rs  startup_new.rs  tasks.rs  templates.rs  time_block_recurrences.rs  time_blocks.rs  trash.rs  view_preferences.rs  views.rs
src-tauri/src/handlers/: area_handlers.rs  mod.rs  payloads.rs  schedule_handlers.rs  time_block_handlers.rs
src-tauri/src/infra/: lexorank_wrapper.rs  mod.rs
src-tauri/src/middleware/: auth.rs  request_id.rs
src-tauri/src/ports/: clock.rs
src-tauri/src/repositories/: memory_repositories.rs  mod.rs  ordering_repository.rs  sqlx_ordering_repository.rs  sqlx_task_repository.rs  sqlx_time_block_repository.rs  task_repository.rs
src-tauri/src/services/: area_service.rs  dtos.rs  ordering_service.rs  task_service.rs
src-tauri/src/shared/: mod.rs
src-tauri/src/startup/: app_state.rs  database.rs  mod.rs  sidecar.rs
src-tauri/tests/: README.md  integration_tests.rs  lib.rs  test_activity_api.rs  test_checkpoint_api.rs  test_link_api.rs  test_project_api.rs  test_tag_api.rs  test_task_api.rs
src-tauri/tests/common/: assertions.rs  fixtures.rs  helpers.rs  mod.rs  test_app.rs
src-tauri/tests/e2e/: mod.rs  test_areas_crud.rs  test_tasks_crud.rs  test_tasks_lifecycle.rs  (+2 more)
(+1090 files in other folders)
