[package]
name = "explore"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "explore"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# ==================== 性能优化配置 ====================
# 开发模式性能优化：加快 dev 模式运行速度
# [profile.dev]
# opt-level = 1 # 轻量优化，保持快速编译（0=无优化，1=基础，2=更多，3=全部）

# # 依赖包使用完全优化（不影响我们自己代码的编译速度）
# [profile.dev.package."*"]
# opt-level = 3 # 所有依赖包全速运行

# # Release 模式配置（已有默认值，这里明确说明）
# [profile.release]
# opt-level = 3
# lto = true        # 链接时优化
# codegen-units = 1 # 更好的优化但编译慢
# strip = true      # 移除符号表，减小体积

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "explore_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Documentation composer tool
[[bin]]
name = "doc-composer"
path = "src/bin/doc_composer.rs"


[build-dependencies]
tauri-build = { version = "2", features = [] }
built = { version = "0.7", features = ["git2", "chrono"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = [
    "cors",
    "trace",
    "compression-gzip",
    "limit",
] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }
tracing-appender = "0.2"
toml = "0.8"
dirs = "5.0"
tempfile = "3.0"
serde_urlencoded = "0.7"
ts-rs = { version = "8.1", features = [
    "uuid-impl",
    "chrono-impl",
    "serde-json-impl",
] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
regex = "1.10"
rrule = "0.14.0"

[dev-dependencies]
# 测试框架
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }

# 断言和工具
assert-json-diff = "2.0"
rstest = "0.18"
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }
